@startuml "Voting System Class Diagram"
!theme plain
hide empty members
skinparam linetype ortho

class User {
  id : Integer <<PK>>
  username : String
  email : String
  password : String
  roles_mask : Integer
  created_at : Datetime
  updated_at : Datetime
}

class Voting {
  id : Integer <<PK>>
  datetime_start : Datetime
  datetime_end : Datetime
  creator_id : Integer
  name : String
  description : Text
  status : VotingStatus
  created_at : Datetime
  updated_at : Datetime
}

class Question {
  id : Integer <<PK>>
  voting_id : Integer
  name : String
  description : Text
  created_at : Datetime
  updated_at : Datetime
}

enum VoteOption {
  YES
  NO
  ABSTAIN
}

enum VotingStatus {
  DRAFT
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

class UsersQuestion {
  user_id : Integer <<PK>>
  question_id : Integer <<PK>>
  chosen_option : VoteOption
  created_at : Datetime
  updated_at : Datetime
}

User "1" -- "0..*" Voting : creates
Voting "1" -- "0..*" Question : contains
Question "1" -- "0..*" UsersQuestion : receives answers
User "1" -- "0..*" UsersQuestion : answers

@enduml
